[package]
name = "silmukka"
version = "0.0.2"
authors = ["Leo Lahti, leo.lahti1@gmail.com"]
[dependencies]
postgres_array="*"
chrono = "0.2"
nickel = "*"
rand = "0.3"
r2d2 = "*"
time ="*"
hyper = "*"
rust-crypto = "*"
rustc-serialize = "*"
[dependencies.postgres]
version = "*"
features = ["chrono"]
[dependencies.nickel_postgres]
git = "https://github.com/TileHalo/nickel-postgres.git"
[dependencies.nickel_session]
git = "https://github.com/nickel-org/session.git"
[dependencies.nickel_cookies]
git = "https://github.com/nickel-org/cookies.git"
